--- a/styles/fonts.css
+++ b/styles/fonts.css
@@ -40,6 +40,8 @@ p {
     font-size: 1.125rem;
     line-height: 1.875rem;
     padding-top: 20px;
+    max-width: 1000px;
+    width: 100%;
 }
 
 strong {
@@ -64,4 +66,14 @@ h1 {
     font-size: 2.85rem;
     line-height: 2.8125rem;
     margin-top: 0;
+}
+
+h2 {
+    align-self: center;
+}
+
+.hoofdkop {
+    font-size: 1.5rem;
+    line-height: 1.875rem;
+    margin-bottom: 2em;
 }
